FILES/style.css
BODY, BODY TABLE.colored TD { background-color: #EEEEEE ; }

BODY {
  background-image: url('_LOGO_');
  background-repeat: no-repeat;
  background-position: center -10px;
}

BODY, TABLE TD, #current_input, TR.filter INPUT {
  border: none ;
  font-family: sans-serif ;
  cursor: text ;
}
INPUT { cursor: text ; }
A { text-decoration: none; }



BODY.autosavefailed H1 { font-size: 130% ; }

BODY.tomuss H1 { font-size: 90% }

IMG { cursor: default; }

SELECT { cursor: pointer; }

BODY.tomuss, BODY.tomuss TABLE INPUT, BODY.tomuss TABLE TD, BODY.tomuss TH, BODY.tomuss P, BODY.tomuss H1 { 
  padding: 0px ;
  margin: 0px;
}


BODY.autosavefailed, BODY.autosavefailed P, BODY.autosavefailed H1, BODY.autosavefailed TABLE.tablehelp TD, BODY.autosavefailed TABLE.tablehelp TH, BODY.autosavefailed #menutop TD  { background-color: #F88 ; }

.identity {
  font-size: 80% ;
  float: right ;
  text-align: right;
  margin-left:2em;
}

.table_ro { background-color: #F00; color: #FFF }

.title_pointers {
  font-size: 70% ;
}

.title_pointers DIV.tipped {
  padding-top: 1em;
}

.shortcut {
  background-color: #0F0 ;
  margin-left: 1em ;
  position: absolute;
  right: 0px ;
}


TABLE.colored { 
  background-color: #999 ;
  border-spacing: 1px ;
}

/* To find if the cursor is inside the table */
DIV#divtable:hover DIV#hover { 
  left: -20px;
}
DIV#divtable DIV#hover { 
  position:absolute;
  left: -10px;
}

DIV#divtable { 
  width: 100% ;
}

TABLE#thetable { 
  table-layout: fixed ;
  width: 100% ;
  border-right: 2px solid black ; /* border of current_cell in last column */
}

/*
TABLE#menutop SELECT:focus { right: 0px ;  }
*/

TABLE#thetable TD, TABLE#thetable TH, TABLE#thetable INPUT, #current_input { 
  white-space: nowrap;
  overflow: hidden ;
  vertical-align: top ;
  text-align: left;
  padding: 0px ;
  margin: 0px;
}

TABLE#thetable TD { height: 1.1em; }

DIV#current_input_div { 
  position: absolute ;
  border: 3px solid blue ;
}

DIV#current_input_div INPUT#current_input {
  width: 100% ;
  height: 100% ;
}


TH, TH INPUT, TH P {
  font-weight: 500 ;
  font-size: 80% ;
  background-color: #DFD ;
/*  background: url(header.png) #DFD ; */
}


TH SELECT { 
  background-color: #CDC ;
}
TD, TH, TABLE INPUT, #current_input {
  font-size: 100% ;
}

THEAD TR TD { 
  white-space: normal;
}

/* TR.filter TH INPUT.notempty { background-color: #DFD ; } */
TR.filter TH INPUT.empty {
  background: url("filtre.png") #DFD ;
  background-repeat: no-repeat ;
}

TR.filter TH INPUT.freezed { border-bottom: 1px solid black; }

#linefilter, #columns_filter, #fullfilter {
  background-color: #FFF ;
  border: 1px solid black ;
}

#linefilter.empty, #columns_filter.empty, #fullfilter.empty {
  background: url("filtre2.png") white ;
  background-repeat: no-repeat ;
}

TR.tablefilter INPUT { width: 10em ; }


TR.ok TD, #current_input.ok, SPAN.ok {  }
BODY TABLE.colored TR.non TD, #current_input.non, SPAN.non, LI.non { background-color: #FBB; }

TD.rw, #current_input.rw, .rw { 
  color: black ;
}

TR.column_title TH { color: #00F; }
TR.column_title TH.ro { color: #88F; }
TR.column_title DIV { position: relative; width:100% }
TR.column_title DIV SPAN { float: left; width:100% }
TR.column_title DIV IMG { position: absolute; right: 0px; top: 0px }


TR.ro, TD.ro, #current_input.ro, TH.ro, TH.ro INPUT, TH.ro SELECT, .ro { 
  color: #555 ;
}
TD.empty { 
 /* background-color: #DDD ; */
}

BODY TABLE.colored TR.highlight_current TD { color: #00A;  }


.is_an_abj { text-decoration: underline ; }
.is_not_an_abi { color: #F00 ; }

TABLE#thetable TD.number, TD.number, #current_input.number { 
  text-align: right ;
}

BODY TABLE.colored TR TD.color_red, #current_input.color_red, .color_red { 
  background-color: #F88 ;
}

BODY TABLE.colored TR TD.color_green, #current_input.color_green, .color_green { 
  background-color: #8F8 ;
}

BODY TABLE.colored TR TD.filtered, #current_input.filtered, BODY TABLE.colored TR.non TD.filtered, BODY TABLE.colored TR.tierstemps TD.filtered, SPAN.filtered { 
  background-color: #FF0 ;
}


TABLE#thetable TH.sorted { 
  font-weight: bold ;
  color: #00F ;
  background-color: #BFB;
}


IMG.server { 
  width: 7px ;
  height: 7px ;
  background-color: orange ;
  border: 0px ;
}

INPUT#comment {
  border: 1px solid black ;
  background-color: white ;
}

TABLE INPUT, TABLE SELECT { 
  width: 100% ;
}

DIV.tipped, DIV.tipped DIV.text { display: inline ; }

DIV.tipped DIV.help { display: none; }

DIV#tip DIV.more { 
  white-space: normal;
  font-weight: bold;
  background-color: inherit ;
  border-top: 1px solid black ;
}

DIV#tip { 
  position: absolute ;
  border: 1px solid black ;
  background-image: url(tip.png) ;
  display: none ;
  padding: 2px ;
  min-width: 10em;
  z-index: 20;
  font-size: 70%;
}

DIV.help > * { font-size: 80%; }

DIV#tip HR {
   width: 20em ; /* Needed for IE, else it is the full screen width */
}

DIV#tip SPAN.title { background-color: #CCF ; }

.cursor IMG {
  vertical-align: middle ;
  border: 0px ;
}

DIV#tip UL, DIV#tip P { margin: 0px ; }


IMG.photo { 
  width: 100px ;
}

TD.comment, .comment { 
  background: url('cell_comment.png');
  background-repeat:no-repeat;
  background-position:right top;
}

TD.comment, #current_input.comment { 
  background-color: white;
}

TD.today, #current_input.today, .today { 
  font-weight: bolder ;
}

TD.default { color: #BBB }


SPAN#teachers { font-weight: bold ; }

#student_data { border: 0px ; width: 1px ; height: 1px ; }


.t7, .t8 { display: none ; }

.copyright {
  color: #AAA ;
  font-size: small ;
}

TABLE.tablehelp { border: none; }
TABLE.tablehelp TR TH { text-align: right; background-color: #EEEEEE; }


IMG.icone { height: 16px; border: none;   vertical-align: bottom ;
 }
IMG.bigicone { width: 100px; border: none; }

.stroked { background-color: #BFB; font-weight: bold }

#menutop A.linkstroked { text-decoration: line-through }
/* ... */

